chore: add lintDriver

--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Build
         uses: leanprover/lean-action@v1
         with:
-          lint-module: Time
+          lint: true
           use-mathlib-cache: false
           test: false
