chore: update to v4.20.0

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,20 +5,20 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "4423ab5313451421f2d1d027868a904784db8e54",
+   "rev": "0bcba0a8e045cc987f009746a0f3d0fef3cd9504",
    "name": "tryAtEachStep",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "lean-v4.19.0",
+   "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "f5d04a9c4973d401c8c92500711518f7c656f034",
+   "rev": "7a0d63fbf8fd350e891868a06d9927efa545ac1e",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.19.0",
+   "inputRev": "v4.20.0",
    "inherited": false,
    "configFile": "lakefile.toml"}],
  "name": "time",
