--- a/lakefile.toml
+++ b/lakefile.toml
@@ -5,12 +5,12 @@ defaultTargets = ["Time"]
 [[require]]
 name = "batteries"
 git = "https://github.com/leanprover-community/batteries"
-rev = "v4.19.0"
+rev = "v4.20.0"
 
 [[require]]
 name = "tryAtEachStep"
 git = "https://github.com/dwrensha/tryAtEachStep"
-rev = "lean-v4.19.0"
+rev = "main"
 
 [[lean_lib]]
 name = "Time"
